# hubspace-ng

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  example.py  populate_sample_data.py  pyproject.toml  report.txt  setup.cfg  survey.py  test.py  test_sample_metadevices.py  tools.py
hubspaceng/: __init__.py  account.py  api.py  const.py  errors.py  log.py  request.py  util.py
hubspaceng/client/: __init__.py  account.py  devices.py  session.py  util.py
hubspaceng/models/: __init__.py  home.py  room.py
hubspaceng/models/devices/: __init__.py  base.py  combo.py  fan.py  light.py  lock.py  plug.py
hubspaceng/models/devices/lights/: __init__.py  base.py  rgb.py  tunable.py
hubspaceng/models/functions/: __init__.py  base.py  category.py  color.py  range.py
hubspaceng/models/places/: __init__.py  home.py  place.py  room.py
hubspaceng/tools/: report.py  survey.py  test_connect.py
src/hubspace-ng/: __init__.py
src/hubspace-ng/client/: account.py  client.py  devices.py  util.py
src/hubspace-ng/devices/: base.py
src/hubspaceng/: api.py  errors.py  request.py  util.py
src/hubspaceng/models/devices/: base.py  combo.py  fan.py  lock.py  plug.py
src/hubspaceng/models/devices/lights/: __init__.py  base.py  rgb.py  tunable.py
src/hubspaceng/models/functions/: base.py  category.py  color.py  range.py
src/hubspaceng/models/places/: room.py
src/hubspaceng/tools/: report.py  survey.py  test_connect.py
